# Habitt

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
habitt/: __init__.py  cli.py
habitt/core/: backup.py  config.py  focus_config.py  jalali_helper.py  menu_utils.py  notify.py  notify_config.py  storage.py  themes.py
habitt/plugins/calendar/: __init__.py
habitt/plugins/notes/: __init__.py
habitt/plugins/pomodoro/: __init__.py
habitt/tico/: cli.py  models.py  todo_manager.py  tui.py
habitt/tracker/: __init__.py  cli.py  models.py  tracker_manager.py  tui.py
src/habitt/: __init__.py  __main__.py  cli.py
src/habitt/core/: __init__.py  backup.py  config.py  gamification.py  jalali_helper.py  menu_utils.py  plugin_base.py  report.py  storage.py  themes.py  validators.py
src/habitt/habit/: __init__.py  cli.py  tui.py
src/habitt/plugins/calendar/: __init__.py
src/habitt/plugins/notes/: __init__.py
src/habitt/tico/: __init__.py  cli.py  models.py  todo_manager.py  tui.py
src/habitt/tracker/: cli.py  models.py  tracker_manager.py  tui.py
tests/: conftest.py
tests/core/: test_backup.py  test_config.py  test_jalali_helper.py  test_menu_utils.py  test_plugin_base.py  test_storage.py  test_themes.py  test_validators.py
tests/habitt/: test_focus_config.py  test_notify.py  test_notify_config.py
tests/plugins/: test_calendar.py  test_notes.py
tests/tico/: test_models.py  test_todo_manager.py  test_tui.py
tests/tracker/: test_models.py  test_tracker_manager.py  test_tui.py
