[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "habitt"
version = "3.1.0"
description = "Terminal-based habit tracker with todo (tico) and activity logger (tracker)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Amir Hossein Nasrollahi", email = "amirhossein.nasrollahi.main@gmail.com" },
]
keywords = ["todo", "habit-tracker", "tui", "terminal", "cli", "pomodoro"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]

dependencies = [
    "rich>=13.0.0",
    "jdatetime>=4.1.0",
    "click>=8.1.0",
    "readchar>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "click-completion>=0.5.0",
    "pytest-cov>=4.0",
]

[project.scripts]
habitt = "habitt.cli:main"
tico = "habitt.tico.cli:main"
tracker = "habitt.tracker.cli:main"

[project.urls]
Homepage = "https://github.com/Amir83Nasr/habitt"
Repository = "https://github.com/Amir83Nasr/habitt"
Issues = "https://github.com/Amir83Nasr/habitt/issues"

[tool.setuptools.packages.find]
include = ["habitt", "habitt.*"]

[tool.setuptools.package-data]
habitt = ["assets/music/*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning:jdatetime.*"]

[tool.coverage.run]
source = ["habitt"]
omit = [
    "habitt/cli.py",
    "habitt/tico/cli.py",
    "habitt/tico/tui.py",
    "habitt/tracker/cli.py",
    "habitt/tracker/tui.py",
    "habitt/plugins/*",
    "habitt/__main__.py",
]

[tool.coverage.report]
show_missing = true
